# decision-lens

./: .gitignore  README.md  SKILL.md  plugin.json  pyproject.toml  requirements.txt
examples/: good_example.md
resources/: report_template.md
scripts/: generate_report.py
zh/: README.md  SKILL.md
zh/examples/: good_example.md
zh/resources/: report_template.md
